--- a/css/trama.less
+++ b/css/trama.less
@@ -9,6 +9,7 @@
 	position: relative;
 	.trama-canvas {
 		// background: url("../img/bg-paper.jpg");
+		// background: url("../img/bg-noise.gif");
 	}
 	.trama-menu {
 		.trama-menu-toggle {
